# TrafficSimulator

./: .gitignore  CMakeLists.txt  README.md  tests.sh
input_file/: samplecity.txt  simulation.sh
output_file/: output.csv
plan/: feedback.md
src/: Building.cpp  Car.cpp  CityObject.cpp  Navigator.cpp  Person.cpp  Simulation.cpp  Vehicle.cpp  buildingexitcrossroad.cpp  cityclass.cpp  crossroadclass.cpp  main.cpp  readme.md  roadlineclass.cpp  roadobjectclass.cpp  trafficlightcrossroad.cpp  unregulatedcrossroad.cpp
src/include/: Building.hpp  Car.hpp  CityObject.hpp  Navigator.hpp  Person.hpp  Simulation.hpp  Vehicle.hpp  buildingexitcrossroad.hpp  cityclass.hpp  crossroadclass.hpp  exceptions.hpp  roadlineclass.hpp  roadobjectclass.hpp  trafficlightcrossroad.hpp  unregulatedcrossroad.hpp
tests/: BuildingTest.cpp  CrossroadTest.cpp  NavigatorTest.cpp  PersonTest.cpp  RoadLineTest.cpp  VehicleTest.cpp  instructions.md  readme.md
